todo-app/deploy/stan-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: stan-service
spec:
  selector:
    run:stan
  ports:
  - protocol: TCP
    port: 4222
    targetPort: 4222
  - protocol: TCP
    port: 8222
    targetPort: 8222
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stan-ingress-port
spec:
  backend:
    serviceName: stan-service
    servicePort: 4222
